--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon server-local.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.0",
     "express": "^4.12.4",
     "netlify-lambda": "^2.0.1",
